# kivisaksetpaperi

./: README.md  pyproject.toml
Dokumentaatio/: Määrittelydokumentti.md
Dokumentaatio/Viikkoraportit/: Viikko 1.md
src/: game.py
testikansio/: testi.txt
tests/: test_game.py
