[tool.poetry]
name = "kivisaksetpaperi"
version = "0.1.0"
description = ""
authors = ["Maka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
